[metadata]
name = XplainML
version = 0.1.0
author = DeependraVerma
author_email = deependra.verma00@gmail.com
description = A Python package for Explainable AI (XAI) and Responsible AI practices.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YourGitHubUsername/XAI_ResponsibleAI_Toolbox
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
install_requires = 
    pandas>=1.0.0
    numpy>=1.0.0
    scikit-learn>=0.24.0
    shap>=0.39.0
    lime>=0.2.0
    aif360>=0.4.0
    fairlearn>=0.7.1

[options.extras_require]
testing =
    tox==3.25.1
    tox-gh-actions
    pytest>=7.1.3
    black>=22.8.0
    flake8>=5.0.4
    mypy>=0.971

[options.package_data]
XplainML = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py